sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:13: error: not found: value j
      j=getNombreValeurs-i-2
      ^AlgCocktailSort1:15: error: not found: value j
      if (plusPetit(j,j+1)==false){
                    ^AlgCocktailSort1:15: error: not found: value j
      if (plusPetit(j,j+1)==false){
                      ^AlgCocktailSort1:16: error: not found: value j
        echange(j,j+1)
                ^AlgCocktailSort1:16: error: not found: value j
        echange(j,j+1)
                  ^